--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">R.G</a>
+              <a class="navbar-brand topnav" href="#"><img src="img/Logo_Navbar.png" alt="nav logo" style="width: 40px; margin-top: -9px; color: white;"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,20 +73,63 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Landing Page</h1>
-                        <h3>A Template by Start Bootstrap</h3>
+
+                        <img src="img/Logo_White.png" style="width:150px; height:150xp">
+
+                        <h1>Revolution Geospatial</h1>
+
+                        <h3>Revolutionising the way your data is handled</h3>
+
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
-                        </ul>
+
+                        <div class="container">
+                          <div class="row">
+                            <div class="contact-button">
+                              <h1 class="text-center"><a href="#myModal" role="button" class="btn btn-default btn-lg" data-toggle="modal"><i class="fa fa-envelope fa-fw" style="margin-right: 10px;"></i>Contact Us</a></h1>
+                            </div>
+                          </div>
+                        </div>
+
+                      <!-- Contact Modal -->
+
+                        <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                <h3 id="myModalLabel">We'd Love to Hear From You</h3>
+                              </div>
+                              <div class="modal-body">
+                                <form action="https://formspree.io/your@email.com" method="POST" class="form-horizontal col-sm-12">
+                                  <div class="form-group">
+                                    <label><span>Name</span></label>
+                                    <input type="text" placeholder="Your Name" name="name" >
+                                  </div>
+                                  <div class="form-group">
+                                    <label><span>Email</span></label>
+                                    <input type="text" placeholder="Your Email" name="name">
+                                  </div>
+                                  <div class="form-group">
+                                    <label><span>Phone</span></label>
+                                    <input type="text" placeholder="Your Number" name="name">
+                                  </div>
+                                  <div class="form-group">
+                                    <label><span>How Can We Help</span></label>
+                                    <textarea class="form-control" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea>
+                                  </div>
+                                  <input type="submit" value="Send">
+                                </form>
+                              </div>
+                            <div class="modal-footer">
+                              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                            </div>
+
+                      <!-- ./Contact Modal -->
+
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
                 </div>
             </div>
@@ -171,20 +214,20 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                <div class="col-lg-7">
+                    <h2>Connect with Revolution Geospatial:</h2>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                     <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
+                      <li>
+                          <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                      </li>
+                      <li>
+                          <a href="#" class="btn btn-default btn-lg"><i class="fa fa-google-plus-square fa-fw" aria-hidden="true"></i> <span class="network-name">Google+</span></a>
+                      </li>
+                      <li>
+                          <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                      </li>
                     </ul>
                 </div>
             </div>
@@ -217,7 +260,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Revolution Geospatial 2016. All Rights Reserved</p>
                 </div>
             </div>
         </div>
